# mulle-template

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  RELEASENOTES.md  mulle-template  mulle-template-completion.sh  mulle-template.sublime-project
.github/workflows/: semgrep.yml
.mulle/etc/project/: formula-info.sh  version-info.sh
cola/: README.md  description.md.bud  example.md.bud  mulle-markdown-preview-n3FbI1.html  properties.plist  template.md  usage.md.bud
dox/reference/: TODO.md  commands.md  csed-script.md  csed.md  environment.md  fsed-script.md  fsed.md  generate.md  hostname.md  index.md  libexec-dir.md  list.md  uname.md  version.md
src/: mulle-template-generate.sh
test/: run-test
test/10-copy-file/: run-test  run-test.stdout
test/20-rename-file/: run-test
test/30-copy-dir/: run-test
test/30-copy-dir/dir/: template
test/30-copy-dir/dir/subdir/: template
test/40-rename-dir/: environment  run-test
test/50-option-mode/: run-test  template
test/60-list-command/: run-test  template-complex  template-empty  template-vars
